Fix text sorting in tabular views

Use ICU-based collator for sorting text, the same that is used by an SQLite
extension.

BUG:338808
REVIEW:120274
FIXED-IN:2.8.6